--- a/Test02/Views/PhongKho/ChiTietKho.cshtml
+++ b/Test02/Views/PhongKho/ChiTietKho.cshtml
@@ -51,6 +51,10 @@
                         <i class="fas fa-plus"></i>
                         Thêm chi tiết kho
                     </a>
+                    <a class="btn btn-primary btn-sm" href="/PhongKho/CreateCTKho/@TempData["makho"]" title="Phân phối sản phẩm" style="margin-left:20px;">
+                        <i class="fa fa-truck"></i>
+                        Phân phối sản phẩm
+                    </a>
                 </div>
                 <div class="table-responsive">
                     <table class="table table-hover table-bordered js-copytextarea" cellpadding="0" cellspacing="0" border="0"
