--- a/Test02/Views/KinhDoanh/Layout/LayoutKD.cshtml
+++ b/Test02/Views/KinhDoanh/Layout/LayoutKD.cshtml
@@ -124,7 +124,7 @@
         $('#sampleTable01').DataTable();
         $('#sampleTable02').DataTable();
     </script>
-    <script type="text/javascript">
+    @*<script type="text/javascript">
         var data = {
             labels: ["Tháng 1", "Tháng 2", "Tháng 3", "Tháng 4", "Tháng 5", "Tháng 6"],
             datasets: [{
@@ -206,7 +206,7 @@
                 win.print();
             }
         }
-    </script>
+    </script>*@
     <script src="~/Content/ckeditor/ckeditor.js"></script>
     @RenderSection("script", false)
 </body>
