--- a/Test02/Views/KinhDoanh/DanhSachCTDH.cshtml
+++ b/Test02/Views/KinhDoanh/DanhSachCTDH.cshtml
@@ -7,6 +7,7 @@
     ViewBag.dh = "active";
     ViewBag.nd = "Danh sách chi tiết đơn hàng";
     QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    var dssp = db.SanPhams.ToList();
 }
 
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
@@ -22,7 +23,30 @@
                 button: "OK",
             });
         </script>
-    };
+    }
+    else if (checkmess == "Không đủ số lượng để đặt")
+    {
+        <script>
+            swal({
+                title: "Thêm sản phẩm vào đơn hàng không thành công",
+                text: "Mã sản phẩm @TempData["slmasp"] không đủ để đặt cho đơn hàng",
+                icon: "error",
+                button: "OK",
+            });
+        </script>
+    }
+    else if(checkmess== "Đã cập nhật chi tiết đơn hàng") 
+    { 
+         <script>
+            swal({
+                title: "Cập nhật đơn hàng @TempData["capnhatdh"] thành công",
+                text: "Đơn hàng @TempData["capnhatdh"] đã được thêm sản phẩm",
+                icon: "success",
+                button: "OK",
+            });
+        </script>   
+    }
+        ;
 }
 <div class="row">
     <div class="col-md-12">
@@ -33,15 +57,6 @@
                     <h3>Danh sách chi tiết của đơn hàng @TempData["madh"]</h3>
                 </div>
                 <div id="sampleTable_wrapper" class="dataTables_wrapper container-fluid dt-bootstrap4 no-footer">
-                    <div class="row">
-
-
-                        <div class="col-md-1">
-                            <div id="sampleTable_filter" class="dataTables_filter">
-                                <label>Tìm kiếm:<input type="search" class="form-control form-control-sm" placeholder="" aria-controls="sampleTable"></label>
-                            </div>
-                        </div>
-                    </div>
                     <div class="row">
                         <div class="col-sm-12">
                             <table class="table table-hover table-bordered js-copytextarea dataTable no-footer" cellpadding="0" cellspacing="0" border="0" id="sampleTable" role="grid" aria-describedby="sampleTable_info">
@@ -117,8 +132,117 @@
                 </div>
             </div>
             <div class="col-sm-12">
-                <a class="btn btn-delete btn-sm nhap-tu-file" href="~/KinhDoanh/ThemCTHD1/@Session["mdh1"]"><i class="fas fa-file-upload"></i> Thêm một sản phẩm</a>
+                <a class="btn btn-delete btn-sm nhap-tu-file" data-target="#myModal" data-toggle="modal" @*href="~/KinhDoanh/ThemCTHD1/@Session["mdh1"]"*@><i class="fas fa-file-upload"></i> Thêm một sản phẩm</a>
             </div>
         </div>
     </div>
 </div>
+
+<!--Thêm một sản phẩm-->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+     data-backdrop="static" data-keyboard="false">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <form id="btnadd" action="/KinhDoanh/ThemCTHD2" method="post">
+                @Html.AntiForgeryToken()
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="form-group  col-md-12">
+                            <span class="thong-tin-thanh-toan">
+                                <h5>Thêm sản phẩm cho đơn hàng @TempData["madh"]</h5>
+                            </span>
+                        </div>
+                        <div class="form-group col-md-12 " style="text-align:center">
+                            <label style="font-size:20px" class="control-label">---------THÔNG TIN ĐƠN HÀNG-------</label>
+                            <input hidden value="@TempData["madh"]" name="MaDH" />
+                            <input hidden id="SoLuongSP" value="" name="sl"/>
+                        </div>
+                        <div class="form-group col-md-12" id="themdong">
+                            @*<div class="form-group col-md-12">
+                                    <label class="control-label">Tên sản phẩm</label>
+                                    <select class="form-control" name="MaSP" required>
+                                        <option>-----Vui lòng chọn sản phẩm------</option>
+                                        @{ foreach (var item01 in dssp)
+                                            {
+                                                <option value="@item01.MaSP">@item01.MaSP</option>
+                                            }
+                                        }
+                                    </select>
+                                </div>
+                                <div class="form-group col-md-12">
+                                    <label class="control-label">Nhập số lượng :</label>
+                                    <input class="form-check" type="number" name="SoLuong" value="true" id="SoLuong" required />
+                                </div>*@
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer ">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <input class="btn btn-add" id="themsp" type="button" name="DiemGiao" value="Thêm SP" onclick="themSP()" required />
+                            <input class="btn btn-cancel" id="xoasp" type="button" name="DiemGiao" disabled value="Xóa SP" onclick="xoaSP()" required />
+                        </div>
+                        <div style="text-align:end" class="col-lg-12">
+                            <button class="btn btn-save" style="margin-left:15px" type="submit">Thêm mới đơn hàng</button>
+                            <a class="btn btn-cancel" data-dismiss="modal" href="#">Hủy bỏ</a>
+                        </div>
+                    </div>
+                </div>
+
+            </form>
+        </div>
+    </div>
+</div>
+<script>
+    var i = 0;
+    function themSP() {
+        if (i >= 3) {
+            $("#themsp").attr("disabled", "disabled");
+        }
+        else {
+            i++;
+            var row = '<div class="row" id="nd' + i + '">' +
+                '<div class="form-group col-lg-9">' +
+                '<label class="control-label">Tên sản phẩm</label>' +
+                ' <select class="form-control" id="ChonSP" name="MaSP' + i +'" required>' +
+                    '<option selected disabled>----Vui lòng chọn sản phẩm----</option>' +
+                    '@{ foreach (var item01 in dssp)
+                        {<option value="@item01.MaSP">@item01.MaSP - @item01.TenSP - SL: @item01.TongTon</option> } }' +
+                '</select>' +
+                    '</div>' +
+                '<div class="form-group col-md-3">' +
+                    '<label class="control-label">Số lượng:</label>' +
+                    '<input class="form-control" type="number" min=0 name="SoLuong'+i+'" value="true" id="SoLuong" required />' +
+                '</div>' +
+                '</div>';
+            $("#xoasp").prop('disabled', false);
+            document.getElementById("themdong").innerHTML += row;
+
+            console.log(i);
+            $("#SoLuongSP").attr("value", i);
+            //$("#btnadd").attr("action", "/KinhDoanh/ThemCTHD2/" + i);
+        };
+
+    }
+
+    function xoaSP() {
+
+        if (i > 0) {
+            $("#themsp").prop('disabled', false);
+            document.getElementById('nd'+i).remove();
+            i--;
+            console.log(i);
+            $("#SoLuongSP").attr("value", i);
+           // $("#btnadd").attr("action", "/KinhDoanh/ThemCTHD2/" + i);
+        } else if (i = 0) {
+            $("#xoasp").attr("disabled", "disabled");
+        };
+    }
+    function resetpage() {
+        i = 0;
+        $("#themsp").prop("disabled",false);
+        var resetp = '';
+        document.getElementById("themdong").innerHTML=resetp;
+    };
+
+</script>
