--- a/Test02/Views/KeToan/QLDonDaGiao.cshtml
+++ b/Test02/Views/KeToan/QLDonDaGiao.cshtml
@@ -75,7 +75,7 @@
                                         <tbody>
                                             @foreach (var item in Model)
                                             {
-                                                if (item.TinhTrangGH == "Đã giao hàng")
+                                                if (item.TinhTrangGH == "Đã giao")
                                                 {
                                                     <tr style="text-align:center">
                                                         <td>
