--- a/Test02/Views/KeToan/QLDonHang.cshtml
+++ b/Test02/Views/KeToan/QLDonHang.cshtml
@@ -128,8 +128,10 @@
 
                                                         </td>
                                                         <td>
-
-                                                            <a href="/KeToan/XuatHDBH/@item.MaDH" class="btn btn-outline-primary btn-sm" ata-toggle="tooltip" title="Xuất đơn hàng">
+                                                            @*<a href="/KeToan/ChinhsuaHD/@item.MaDH" id="btnedit" class="btn btn-outline-primary btn-sm" ata-toggle="tooltip" title="Cập nhật đơn hàng">
+                                                                <i class="fas fa-pen-square"></i>
+                                                            </a>*@
+                                                            <a href="/KeToan/XuatHDBH/@item.MaDH" id="" class="btn btn-outline-primary btn-sm" ata-toggle="tooltip" title="Xuất đơn hàng">
                                                                 <i class="fas fa-info-circle"></i>
                                                             </a>
 
@@ -167,6 +169,8 @@
                     document.body.innerHTML = originalContents;
 
                 }
+
+                
             </script>
          
 
