--- a/Test02/Views/KeToan/ChinhsuaHD.cshtml
+++ b/Test02/Views/KeToan/ChinhsuaHD.cshtml
@@ -28,26 +28,26 @@
 
                 <div style="padding:20px">
                     <div style="text-align:center">
-                        <h4>HÓA ĐƠN ĐƠN HÀNG</h4>
-                        <p> <strong>Ngày: </strong>@Html.DisplayFor(model => n)</p>
+                        <h4>THÔNG TIN ĐƠN HÀNG</h4>
+                        <p> <strong>Ngày lập: </strong>@Html.DisplayFor(model => n)</p>
                         <p> <strong>Mã đơn hàng: </strong>@Html.DisplayFor(model => model.MaDH)</p>
+                        
                     </div>
 
 
-                    <p> <strong>Tên đại lý: </strong>@Html.DisplayFor(model => daily.TenDL)</p>
-                    <p> <strong>Loại đại lý: </strong>@Html.DisplayFor(model => loaidaily.MaLoaiDL)</p>
+                    <p> <strong>Tên đại lý: </strong>@Html.DisplayFor(model => daily.TenDL) - @Html.DisplayFor(model => loaidaily.MaLoaiDL)</p>
                     <p> <strong>Địa chỉ: </strong>@Html.DisplayFor(model => daily.DiaChi)</p>
                     <div class="row">
-                        <div class="col-sm-12">
+                        <div class="col-sm-12 table-responsive">
                             <table class="table table-hover table-bordered js-copytextarea dataTable no-footer" cellpadding="0" cellspacing="0" border="0" id="sampleTable" role="grid" aria-describedby="sampleTable_info">
                                 @*//Phần render từng dòng trong C#*@
                                 <thead>
                                     <tr role="row" style="text-align:center">
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 100px;">Mã CTDH</th>
-                                        <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 100px;">Mã SP</th>
-                                        <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 100px;">Tên sản phẩm</th>
-                                        <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 100px;">Số lượng</th>
-                                        <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 120px;">Thành tiền</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable">Mã CTDH</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable">Mã SP</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable">Tên sản phẩm</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable">Số lượng</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable">Thành tiền</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -87,7 +87,7 @@
 
                                     }
                                     <tr>
-                                        <th colspan="3">Tổng cộng tiền nợ:</th>
+                                        <th colspan="4">Tổng cộng tiền nợ:</th>
                                         @{ var TongCong = string.Format("{0:0,0 vnđ}", total);}
                                         <td>@Html.DisplayFor(modelItem => TongCong)</td>
                                     </tr>
@@ -97,9 +97,6 @@
                     @using (Html.BeginForm())
                     {
                         @Html.AntiForgeryToken()
-
-
-
                         <hr />
                         @Html.HiddenFor(model => model.MaDH)
                         @Html.HiddenFor(model => model.MaDL)
@@ -111,7 +108,7 @@
                         @Html.HiddenFor(model => model.PhieuXuatKho)
                         @Html.HiddenFor(model => model.TinhTrangGH)
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                        <h5> CẬP NHẬT THÔNG TIN ĐƠN HÀNG</h5>
+                        <h5 style="padding-top:10px;text-align:center"> CẬP NHẬT THÔNG TIN ĐƠN HÀNG</h5>
                         <div class="row">
 
                             <div class="form-group col-sm-6">
@@ -130,7 +127,7 @@
                             <div class="form-group col-sm-6">
                                 <strong>Xác nhận xuất phiếu</strong>
                                 <div class="col-md-10">
-                                    <select class="form-control" id="XuatHoaDon" name="XuatHoaDon">
+                                    <select class="form-control" id="XuatHoaDon" name="XuatHoaDon" onchange="CheckXuatHD()" >
                                         <option selected="@Model.XuatHoaDon">@Model.XuatHoaDon</option>
                                         <option value="true">True</option>
                                         <option value="false">False</option>
@@ -146,20 +143,26 @@
                                 <div class="col-md-offset-2 col-md-10">
                                     <input type="submit" value="Lưu thay đổi" class="btn btn-success btn-sm" />
                                 </div>
+
                             </div>
                             <div class="form-group col-sm-2">
+                                <a id="btnxuathd" class="btn btn-outline-primary btn-sm" ata-toggle="tooltip" title="Xuất đơn hàng"  >
+                                    <i class="fas fa-info-circle"></i>
+                                </a>
+
                                 <div class="col-md-offset-2 col-md-10">
-                                    @if (Model.TinhTrangThanhToan == "Chưa thanh toán")
+
+                                    @if (Model.TinhTrangGH == null)
                                     {
-                                        <a class="btn btn-warning btn-sm" href="/KeToan/QLDonHang">Quay lại danh sách</a>
+                                        <a class="btn btn-danger btn-sm" type="button" title="Quay lại " href="~/KeToan/QLDonHang">Quay lại</a>
                                     }
-                                    else if (Model.TinhTrangThanhToan == "Đã thanh toán")
+                                    else if (Model.TinhTrangGH == "Đã giao")
                                     {
-                                        <a class="btn btn-warning btn-sm" href="/KeToan/QLDonThanhToan">Quay lại danh sách</a>
+                                        <a class="btn btn-danger btn-sm" type="button" title="Quay lại " href="~/KeToan/QLDonDaGiao">Quay lại</a>
                                     }
-                                    else
+                                    else if (Model.TinhTrangGH == "Chờ giao")
                                     {
-                                        <a class="btn btn-warning btn-sm" href="/KeToan/QLDonNo">Quay lại danh sách</a>
+                                        <a class="btn btn-danger btn-sm" type="button" title="Quay lại " href="~/KeToan/QLDonChoGiao">Quay lại</a>
                                     }
 
                                 </div>
@@ -180,4 +183,6 @@
 
             </div>
         </div>
+
+</script>
    
