--- a/Test02/Views/QTV/ChinhsuaNV.cshtml
+++ b/Test02/Views/QTV/ChinhsuaNV.cshtml
@@ -1,27 +1,36 @@
 ﻿@model Test02.Models.NhanVien
 
 @{
-    ViewBag.Title = "ChinhsuaNV";
+    ViewBag.Title = "Cập nhật thông tin";
     Layout = "~/Views/QTV/Layout/LayoutQTV.cshtml";
     ViewBag.qtnv = "active";
-    ViewBag.nd = "Chỉnh sửa thông tin nhân viên";
+    ViewBag.nd = "Cập nhật thông tin nhân viên";
 }
 
 <div class="tile" style="margin:10px 20px;">
     <h3 class="tile-title">THÊM TÀI KHOẢN NHÂN VIÊN </h3>
     <div class="tile-body contenner" style="padding-top:10px">
-        @Html.AntiForgeryToken()
-        @Html.HiddenFor(model => model.MaNV)
-        @Html.HiddenFor(model => model.HinhAnh)
+        
         <form class="row" method="post" enctype="multipart/form-data" action="/QTV/ChinhsuaNV">
+            @Html.AntiForgeryToken()
+        @Html.HiddenFor(model => model.MaNV)
+        @*@Html.HiddenFor(model => model.HinhAnh)*@
             <div class="imgstaff col-sm-5">
                 <div class="col-sm-12" style="text-align: center;">
                     <label class="control-label">Chọn hình ảnh</label>
                     @Html.TextBox("HinhAnh", "", new { type = "file" })
                     <br />
-                    <img id="preview" class="rounded-circle " src="@Model.HinhAnh" width="230" height="230" style="object-fit:cover; object-position:center; text-align: center;" />
+                    <img onclick="checkhinh()" class="rounded-circle " src="/Data/Images/@Model.HinhAnh" width="230" height="230" style="object-fit:cover; object-position:center; text-align: center;" />
                     <br />
+                    <input name="imgnv" value="@Model.HinhAnh" style="visibility:hidden"/>
                 </div>
+
+            @*<script>
+                function checkhinh() {
+                   var a = document.getElementById("input-id").value;
+                    alert(a);
+                }
+            </script>*@
 
             </div>
             <div class="info-staff col-sm-6">
@@ -53,7 +62,14 @@
                     </div>
                     <div class="form-group col-md-6">
                         <strong>Chức vụ</strong>
-                        @Html.DropDownList("MaChucVu", null, htmlAttributes: new { @class = "form-control",})
+                        <select class="form-control" id="MaChucVu" name="MaChucVu">
+                            <option selected="@Model.MaChucVu">@Model.MaChucVu</option>
+                            <option>NVK</option>
+                            <option>NVKD</option>
+                            <option>NVKT</option>
+                            <option>NVGH</option>
+                            <option>QTHT</option>
+                        </select>
                         @Html.ValidationMessageFor(model => model.MaChucVu, "", new { @class = "text-danger" })
                     </div>
                     <div class="form-group col-md-6">
@@ -72,14 +88,14 @@
 
 
                     </div>
-                    @*<div class="form-group col-md-6">
+                    <div class="form-group col-md-6">
                         <strong>Xác nhân password</strong>
-                        <input class="form-control" type="text" id="pass2" name="typepassword" required="required" onchange="PassCheck()" type="password" />
+                        <input class="form-control" id="pass2" name="typepassword" required="required" onchange="PassCheck()" type = "password" value="@Model.Password" />
                         <span id="checkpass"></span>
 
 
 
-                    </div>*@
+                    </div>
                 </div>
             </div>
             <div class="col-sm-5">
@@ -90,7 +106,7 @@
             <div class="col-sm-5">
                 <div class="row">
                     <div class="col-sm-4">
-                        <input type="submit" value="Lưu " id="btn-submit" class="btn btn-success btn-sm" />
+                        <input type="submit" value="Lưu thông tin " id="btn-submit" class="btn btn-success btn-sm" />
                     </div>
                     <div class="col-sm-">
                         <a href="/QTV/QLNhanVien" class="btn btn-warning btn-sm">Quay lại danh sách</a>
@@ -108,15 +124,7 @@
 
 @* script của upload *@
 
-<script>
-    HinhAnh.onchange = evt => {
-        const [file] = HinhAnh.files
-        if (file) {
-            preview.src = URL.createObjectURL(file);
-            $("#preview").removeClass("hidden");
-        }
-    }
-</script>
+
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script src="Scripts/jquery-1.4.1.js" type="text/javascript"></script>
 <script type="text/javascript">
