--- a/Test02/Views/QTV/ChitietNV.cshtml
+++ b/Test02/Views/QTV/ChitietNV.cshtml
@@ -2,7 +2,7 @@
 @using Test02.Models
 
 @{
-    ViewBag.Title = "Chi tiết nhân viên";
+    ViewBag.Title = "Thông tin nhân viên";
     Layout = "~/Views/QTV/Layout/LayoutQTV.cshtml";
     ViewBag.qtnv = "active";
     ViewBag.nd = "Chi tiết thông tin";
@@ -15,22 +15,13 @@
         <div class="tile">
             <div class="tile-body" id="tile-body">
                 <div id="sampleTable_wrapper" class="dataTables_wrapper container-fluid dt-bootstrap4 no-footer">
-                    <h1 style="text-align: center; color: rgb(0, 28, 64);">
+                    <h4 style="text-align: center;">
                         THÔNG TIN NHÂN VIÊN
-                    </h1>
+                    </h4>
                     <div class="staffinfo row">
-                        <div class="staff-img col-md-4">
-                            @{
-                                var img = Model.HinhAnh;
-                                if (img == null)
-                                {
-                                    <img src="#" class="rounded-circle" alt="Cinque Terre" width="200" height="200" style="margin-top:30px;">
-                                }
-                                else
-                                {
-                                    <img src="@Model.HinhAnh" class="rounded-circle" alt="Cinque Terre" width="200" height="200" style="margin-top:30px;">
-                                }
-                            }
+                        <div class="staff-img col-md-4"  style="text-align:center">
+                          <img src="/Data/Images/@Model.HinhAnh" class="rounded-circle" alt="Cinque Terre" width="150" height="150" >
+                              
                         </div>
                         <div class="staff-content col-md-8">
                             <p>
@@ -62,6 +53,7 @@
                                 <span>
                                     <strong>Contact:</strong> @Html.DisplayFor(modelItem => Model.SDT)
                                 </span>
+                                -
                                 <span>
                                     <strong>Email: </strong> @Html.DisplayFor(modelItem => Model.Email)
                                 </span>
