--- a/Test02/Views/KinhDoanh/DanhSachCTDH.cshtml
+++ b/Test02/Views/KinhDoanh/DanhSachCTDH.cshtml
@@ -35,16 +35,17 @@
             });
         </script>
     }
-    else if(checkmess== "Đã cập nhật chi tiết đơn hàng") 
-    { 
-         <script>
+    else if (checkmess == "Đã cập nhật chi tiết đơn hàng")
+    {
+        <script>
             swal({
                 title: "Cập nhật đơn hàng @TempData["capnhatdh"] thành công",
                 text: "Đơn hàng @TempData["capnhatdh"] đã được thêm sản phẩm",
                 icon: "success",
                 button: "OK",
             });
-        </script>   
+        </script>
+
     }
         ;
 }
@@ -58,7 +59,7 @@
                 </div>
                 <div id="sampleTable_wrapper" class="dataTables_wrapper container-fluid dt-bootstrap4 no-footer">
                     <div class="row">
-                        <div class="col-sm-12">
+                        <div class="col-sm-12 table-responsive">
                             <table class="table table-hover table-bordered js-copytextarea dataTable no-footer" cellpadding="0" cellspacing="0" border="0" id="sampleTable" role="grid" aria-describedby="sampleTable_info">
                                 @*//Phần render từng dòng trong C#*@
                                 <thead>
@@ -155,7 +156,7 @@
                         <div class="form-group col-md-12 " style="text-align:center">
                             <label style="font-size:20px" class="control-label">---------THÔNG TIN ĐƠN HÀNG-------</label>
                             <input hidden value="@TempData["madh"]" name="MaDH" />
-                            <input hidden id="SoLuongSP" value="" name="sl"/>
+                            <input hidden id="SoLuongSP" value="" name="sl" />
                         </div>
                         <div class="form-group col-md-12" id="themdong">
                             @*<div class="form-group col-md-12">
@@ -174,6 +175,9 @@
                                     <input class="form-check" type="number" name="SoLuong" value="true" id="SoLuong" required />
                                 </div>*@
                         </div>
+                        <div class="form-group col-md-12"  style="text-align:end">
+                            <label style="font-size:20px;color:red" id="TongTien" class="control-label">Tổng tiền: </label>
+                        </div>
                     </div>
                 </div>
                 <div class="modal-footer ">
@@ -185,16 +189,22 @@
                         <div style="text-align:end" class="col-lg-12">
                             <button class="btn btn-save" style="margin-left:15px" type="submit">Thêm mới đơn hàng</button>
                             <a class="btn btn-cancel" data-dismiss="modal" href="#">Hủy bỏ</a>
+
                         </div>
                     </div>
                 </div>
-
+                <h5 id="TongTien"></h5>
             </form>
         </div>
     </div>
 </div>
 <script>
-    var i = 0;
+
+
+</script>
+@section script{
+    <script>
+        var i = 0;
     function themSP() {
         if (i >= 3) {
             $("#themsp").attr("disabled", "disabled");
@@ -202,9 +212,9 @@
         else {
             i++;
             var row = '<div class="row" id="nd' + i + '">' +
-                '<div class="form-group col-lg-9">' +
-                '<label class="control-label">Tên sản phẩm</label>' +
-                ' <select class="form-control" id="ChonSP" name="MaSP' + i +'" required>' +
+                '<div class="form-group col-lg-6">' +
+                    '<label class="control-label">Tên sản phẩm</label>' +
+                ' <select class="form-control" id="ChonSP'+i+'" name="MaSP' + i +'" required>' +
                     '<option selected disabled>----Vui lòng chọn sản phẩm----</option>' +
                     '@{ foreach (var item01 in dssp)
                         {<option value="@item01.MaSP">@item01.MaSP - @item01.TenSP - SL: @item01.TongTon</option> } }' +
@@ -212,7 +222,10 @@
                     '</div>' +
                 '<div class="form-group col-md-3">' +
                     '<label class="control-label">Số lượng:</label>' +
-                    '<input class="form-control" type="number" min=0 name="SoLuong'+i+'" value="true" id="SoLuong" required />' +
+                    '<input class="form-control" type="number" min=0 name="SoLuong' + i + '" id="SoLuong' + i +'" required />' +
+                '</div>' +
+                '<div class="form-group col-md-3">' +
+                    '<p class="control-label" style="margin-top: 16px;" id="Total'+i+'">Thành tiền: 0 VNĐ </p>' +
                 '</div>' +
                 '</div>';
             $("#xoasp").prop('disabled', false);
@@ -224,7 +237,6 @@
         };
 
     }
-
     function xoaSP() {
 
         if (i > 0) {
@@ -243,6 +255,73 @@
         $("#themsp").prop("disabled",false);
         var resetp = '';
         document.getElementById("themdong").innerHTML=resetp;
-    };
+        }
+        
+        $(document).ready(function () {
+            const VND = new Intl.NumberFormat('vi-VN', {
+                style: 'currency',
+                currency: 'VND',
+            });
+            var divElement = $("#themdong").change(function () {
 
-</script>
+                for (var item = 1; item <= i; item++) {
+                    var value = $("#ChonSP" + item).val();
+                    if (value != null) {
+                        var sL = $("#SoLuong" + item).val();
+
+                        if (sL != 0) {
+                            console.log("Bạn đã chọn sản phẩm với mã "+ value +" Với số lượng là :"+sL);
+                            var model = {
+                                MaSP: value,
+                                SoLuong: sL
+                            };
+                            console.log("Item trước khi thêm vào tổng tiền " + item + "Với tổng tiền là : " + TinhTongTien(model));
+                            TinhTongTien(model, item);
+                            
+                        }
+                        
+                    }
+                    
+                }
+                
+            });
+        });
+        function CheckTongTien() {
+            const VND = new Intl.NumberFormat('vi-VN', {
+                style: 'currency',
+                currency: 'VND',
+            });
+            debugger;
+            var total = 0;
+            for (var item01 = 1; item01 < 3; item01++) {
+                var check = $("#Total" + item01).data("value");
+                if (check != null) {
+                    total += check;
+                }
+
+            }
+            $("#TongTien").html('Tổng tiền: ' + VND.format(total));
+        }
+        function TinhTongTien(model, item) {
+            const VND = new Intl.NumberFormat('vi-VN', {
+                style: 'currency',
+                currency: 'VND',
+            });
+            $.ajax({
+                url: '/KinhDoanh/CheckTongTien',
+                type: 'POST',
+                dataType:"json",
+                data: model,
+                success: function (res) {
+                    console.log("Tổng tiền :" + res.data);
+                    var result = res.data;
+                    debugger
+                    $("#Total" + item).html("Thành tiền " + VND.format(result));
+                    $("#Total" + item).attr('data-value', result);
+                    CheckTongTien();
+                }
+            });
+
+        }
+    </script>
+}
