--- a/Test02/Views/PhongKho/ChiTietPhieuNhapKho.cshtml
+++ b/Test02/Views/PhongKho/ChiTietPhieuNhapKho.cshtml
@@ -10,11 +10,24 @@
     var dsCTKho = db.ChiTietKhoes.ToList();
     List<string> distint = new List<string>();
 }
-
+@{
+    var checkMessage = TempData["AlertMessage"];
+    if (checkMessage == "Đã thêm")
+    {
+        <script>
+            swal({
+                title: "Thêm thành công",
+                text: "Đã thêm phiếu đề nghị nhập kho @TempData["MaPNKho"]!",
+                icon: "success",
+                button: "OK",
+            });
+        </script>
+    }
+}
 <div class="row">
     <div class="col-md-12">
         <div class="tile" id="printMe">
-            <h2 style="text-align:center" >PHIẾU ĐỀ NGHỊ NHẬP KHO</h2>
+            <h2 style="text-align:center">PHIẾU ĐỀ NGHỊ NHẬP KHO</h2>
             <form style="text-align:center" id="sample2">
                 <label for="date">Ngày:</label>
                 @Html.DisplayFor(model => model.NgayLap)<br>
@@ -58,38 +71,65 @@
                         <table class="table table-hover table-bordered js-copytextarea" cellpadding="0" cellspacing="0" border="0">
                             <thead>
                                 <tr>
-                                    <th style="text-align:center;">Mã Kho</th>
-                                    <th style="text-align:center;">Mã sản phẩm</th>
-                                    <th style="text-align:center;">Tên sản phẩm</th>
-                                    <th style="text-align:center;">Giá tiền</th>
-                                    <th style="text-align:center;">Số lượng còn lại</th>
-                                    <th style="text-align:center;">Đơn vị tính</th>
-
+                                    <th rowspan="2" style="text-align:center; background-color:azure">Mã Kho</th>
+                                    <th rowspan="2" style="text-align: center; background-color: azure">Mã sản phẩm</th>
+                                    <th rowspan="2" style="text-align: center; background-color: azure">Tên sản phẩm</th>
+                                    <th rowspan="2" style="text-align: center; background-color: azure">Giá tiền</th>
+                                    <th rowspan="2" style="text-align: center; background-color: azure">Đơn vị tính</th>
+                                    <th colspan="2" style="text-align: center; background-color: beige">Trong kho</th>
+                                    <th colspan="2" style="text-align:center; background-color:burlywood">Cần nhập</th>
+                                </tr>
+                                <tr>
+                                    <th style="text-align: center; background-color: beige ">Số lượng</th>
+                                    <th style="text-align: center; background-color: beige ">Thành tiền</th>
+                                    <th style="text-align: center; background-color: burlywood">Số lượng</th>
+                                    <th style="text-align: center; background-color: burlywood">Thành tiền</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                @foreach (var item in dsCTKho)
+                                @foreach (var item in db.ChiTietPhieuNhapXuats)
                                 {
-                                    if (item.TinhTrang == "Sắp hết hàng")
+                                    if (item.MaPhieu == Model.MaPhieu)
                                     {
                                         <tr>
-                                            <td>
+                                            <td style="text-align: center;">
                                                 @Html.DisplayFor(modelItem => item.MaKho)
                                             </td>
-                                            <td>
+                                            <td style="text-align: center;">
                                                 @Html.DisplayFor(modelItem => item.MaSP)
                                             </td>
-                                            <td>
+                                            <td style="text-align: center;">
                                                 @Html.DisplayFor(modelItem => item.SanPham.TenSP)
                                             </td>
                                             <td>
                                                 @Html.DisplayFor(modelItem => item.SanPham.Gia)
                                             </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.SoLuong)
-                                            </td>
-                                            <td>
+                                            <td style="text-align: center;">
                                                 @Html.DisplayFor(modelItem => item.SanPham.DonViTinh)
+                                            </td>
+                                            <td style="text-align: center;">
+                                                @Html.DisplayFor(modelItem => item.SoLuongTrongKho)
+                                            </td>
+                                            <td style="text-align:center">
+                                                @{
+                                                    var sl = item.SoLuongTrongKho;
+                                                    var gia = item.SanPham.Gia;
+
+                                                    var result = sl * gia;
+                                                }
+                                                @string.Format("{0:#,##0}", result) VNĐ
+                                            </td>
+                                            <td style="text-align: center;">
+                                                @Html.DisplayFor(modelItem => item.SoLuongDeXuat)
+                                            </td>
+                                            <td style="text-align:center">
+                                                @{
+                                                    var sl1 = item.SoLuongDeXuat;
+                                                    var gia1 = item.SanPham.Gia;
+
+                                                    var result1 = sl1 * gia1;
+                                                }
+                                                @string.Format("{0:#,##0}", result1) VNĐ
                                             </td>
                                         </tr>
                                     }
@@ -110,7 +150,7 @@
 </div>
 
 <p>
-    <a class="btn btn-actv btn-sm" id="btnReturn"  href="/PhongKho/NhapKho" title="Trở lại">
+    <a class="btn btn-actv btn-sm" id="btnReturn" href="/PhongKho/NhapKho" title="Trở lại">
         <i class="fas fa-retweet"></i>
         Trở lại
     </a>
