--- a/Test02/Views/PhongKho/Layout/_LayoutPage1.cshtml
+++ b/Test02/Views/PhongKho/Layout/_LayoutPage1.cshtml
@@ -124,6 +124,7 @@
     <script type="text/javascript">$('#sampleTable').DataTable();</script>
     <script type="text/javascript">$('#sampleTable1').DataTable();</script>
     <script type="text/javascript">$('#sampleTable2').DataTable();</script>
+    <script type="text/javascript">$('#sampleTable3').DataTable();</script>
     <!--<script src="js/jquery-3.2.1.min.js"></script>
     <!--===============================================================================================-->
     <!--<script src="js/popper.min.js"></script>
@@ -143,9 +144,9 @@
 
     @*<script type="text/javascript" src="~/Scripts/jquery.dataTables.min.js"></script>
 
-    <script type="text/javascript" src="~/Scripts/dataTables.bootstrap.min.js"></script>
+        <script type="text/javascript" src="~/Scripts/dataTables.bootstrap.min.js"></script>
 
-    <script type="text/javascript">$('#sampleTable').DataTable();</script>-->*@
+        <script type="text/javascript">$('#sampleTable').DataTable();</script>-->*@
 
     <!--dialog_message -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
@@ -195,5 +196,6 @@
         }
 
     </script>
+    
 </body>
 </html>
