--- a/Test02/Views/PhongKho/ChiTietKho.cshtml
+++ b/Test02/Views/PhongKho/ChiTietKho.cshtml
@@ -51,7 +51,7 @@
                         <i class="fas fa-plus"></i>
                         Thêm chi tiết kho
                     </a>
-                    <a class="btn btn-primary btn-sm" href="/PhongKho/CreateCTKho/@TempData["makho"]" title="Phân phối sản phẩm" style="margin-left:20px;">
+                    <a class="btn btn-primary btn-sm" href="/PhongKho/PhanPhoiSanPham" title="Phân phối sản phẩm" style="margin-left:20px;">
                         <i class="fa fa-truck"></i>
                         Phân phối sản phẩm
                     </a>
