--- a/Test02/Views/PhongKho/QuanLyDL.cshtml
+++ b/Test02/Views/PhongKho/QuanLyDL.cshtml
@@ -11,22 +11,11 @@
     int soluong = 0;
     var chiTietKhos = db.ChiTietKhoes.ToList();
     var sanPhams = db.SanPhams.ToList();
-    
+
 }
-@{
-    var checkMessage = TempData["AlertMessage"];
-    if (checkMessage == "Đã thêm")
-    {
-        <script>
-            swal({
-                title: "Thêm thành công",
-                text: "Đã thêm phiếu đề nghị nhập kho @TempData["MaPNKho"]!",
-                icon: "success",
-                button: "OK",
-            });
-        </script>
-    }
-}
+
+
+<link href="~/Content/toastNoti.css" rel="stylesheet" />
 <div>
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist">
@@ -74,32 +63,32 @@
                                     <tbody>
                                         @foreach (var item in sanPhams)
                                         {
-                                        <tr>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.MaSP)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.TenSP)
-                                            </td>
-                                            <td>
-                                                <img src="@item.HinhAnh" style="width:80px; height:100px;" />
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.Gia)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.DonViTinh)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.NgaySX)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.HanSD)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.TongTon)
-                                            </td>
-                                        </tr>
+                                            <tr>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.MaSP)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.TenSP)
+                                                </td>
+                                                <td>
+                                                    <img src="@item.HinhAnh" style="width:80px; height:100px;" />
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.Gia)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.DonViTinh)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.NgaySX)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.HanSD)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.TongTon)
+                                                </td>
+                                            </tr>
                                         }
                                     </tbody>
                                 </table>
@@ -117,10 +106,49 @@
                         <div class="tile-body">
                             <div class="row element-button">
                                 <div class="col-sm-2">
-                                    <a class="btn btn-add btn-sm" href="/PhongKho/TaoPhieuNhapKho" title="Thêm">
-                                        <i class="fas fa-plus"></i>
-                                        Tạo phiếu đề nghị nhập hàng hóa
-                                    </a>
+                                    @*var a = TempData["tongSPHH"];
+                                        var b = TempData["checkTrungSPHH"];
+                                        if ((int)a != 0)
+                                        {
+                                            if ((bool)b == true)
+                                            {
+                                                <a class="btn btn-add btn-sm" style="cursor:no-drop" onclick="createToast1('error')" >
+                                                    <i class="fas fa-plus"></i>
+                                                    Tạo phiếu đề nghị nhập hàng hóa
+                                                </a>
+                                            }
+                                            else
+                                            {
+                                                <a class="btn btn-add btn-sm" href="/PhongKho/TaoPhieuNhapKho" title="Thêm">
+                                                    <i class="fas fa-plus"></i>
+                                                    Tạo phiếu đề nghị nhập hàng hóa
+                                                </a>
+                                            }
+                                        }
+                                        else if ((int)a == 0)
+                                        {
+                                            <a class="btn btn-add btn-sm" style="cursor:no-drop"  onclick="createToast1('warning')">
+                                                <i class="fas fa-plus"></i>
+                                                Tạo phiếu đề nghị nhập hàng hóa
+                                            </a>
+                                        }*@
+                                    @{
+                                        var a = TempData["tongSPHH"];
+                                        if ((int)a == 0)
+                                        {
+                                            <a class="btn btn-add btn-sm" style="cursor:no-drop">
+                                                <i class="fas fa-plus"></i>
+                                                Tạo phiếu đề nghị nhập hàng hóa
+                                            </a>
+                                        }
+                                        else
+                                        {
+                                            <a class="btn btn-add btn-sm" href="/PhongKho/TaoPhieuNhapKho" title="Thêm">
+                                                <i class="fas fa-plus"></i>
+                                                Tạo phiếu đề nghị nhập hàng hóa
+                                            </a>
+                                        }
+                                    }
                                 </div>
                             </div>
                             <h3 class="tile-title" style="text-align:center">DANH SÁCH SẢN PHẨM SẮP HẾT HÀNG / HẾT HÀNG</h3>
@@ -183,7 +211,6 @@
                                         }
                                     </tbody>
                                 </table>
-
                             </div>
                         </div>
                     </div>
@@ -196,9 +223,21 @@
                     <div class="tile">
                         <div class="row element-button">
                             <div class="col-md-12">
-                                <a class="btn btn-warning" type="button" href="GiaiQuyetTonKho">
-                                    <i class="fas fa-retweet"></i> Giải quyết tất cả
-                                </a>
+                                @{
+                                    var c = TempData["TongSPTK"];
+                                    if ((int)c == 0)
+                                    {
+                                        <a class="btn btn-warning" style="cursor:no-drop">
+                                            <i class="fas fa-retweet"></i> Giải quyết tất cả
+                                        </a>
+                                    }
+                                    else
+                                    {
+                                        <a class="btn btn-warning" type="button" href="/PhongKho/GiaiQuyetTonKho">
+                                            <i class="fas fa-retweet"></i> Giải quyết tất cả
+                                        </a>
+                                    }
+                                }
                             </div>
                         </div>
                         <div>
@@ -206,7 +245,7 @@
                         </div>
                         <div class="tile-body table-responsive">
                             <table class="table table-hover table-striped table-bordered js-copytextarea" cellpadding="0" cellspacing="0" border="0"
-                                       id="sampleTable2">
+                                   id="sampleTable2">
                                 <thead>
                                     <tr>
                                         <th>Mã Kho</th>
@@ -258,85 +297,119 @@
     </div>
 </div>
 
-
-
 <script>
-    function deleteRow(r) {
-        var i = r.parentNode.parentNode.rowIndex;
-        document.getElementById("myTable").deleteRow(i);
+    function createToast1(status, timeout) {
+        let temp = `<i class="fas fa-circle-exclamation"></i>
+                    <span class="message">This is a Success message!</span>
+                    `
+        switch (status) {
+            case 'success':
+                temp = `<i class="fas fa-circle-exclamation"></i>
+                        <span class="message">This is a Success message!</span>`
+                break;
+            case 'warning':
+                temp = `<i class="fa fa-exclamation-triangle"></i>
+                        <span class="message">Đơn hàng chưa có hóa đơn!</span>`
+                break;
+            case 'error':
+                temp = `<i class="fa fa-exclamation-circle"></i>
+                        <span class="message">Đơn hàng đã tạo phiếu!</span>`
+                break;
+        }
+
+        var toast = document.createElement('div')
+        toast.classList.add('toast')
+        toast.classList.add(status)
+        toast.innerHTML = `${temp}<div class="countdown"></div>`
+        var toastList = document.getElementById('toasts')
+        toastList.appendChild(toast)
+        timeout = timeout || 4000
+        setTimeout(function () {
+            toast.style.animation = 'slidehide 2s ease forwards'
+        }, timeout)
+        setTimeout(function () {
+            toast.remove()
+        }, timeout + 2000)
     }
-    jQuery(function () {
-        jQuery(".trash").click(function () {
-            swal({
-                title: "Cảnh báo",
+</script>
 
-                text: "Bạn có chắc chắn là muốn xóa sản phẩm?",
-                buttons: ["Hủy bỏ", "Đồng ý"],
-            })
-                .then((willDelete) => {
-                    if (willDelete) {
-                        swal("Đã xóa thành công.!", {
+@*<script>
+        function deleteRow(r) {
+            var i = r.parentNode.parentNode.rowIndex;
+            document.getElementById("myTable").deleteRow(i);
+        }
+        jQuery(function () {
+            jQuery(".trash").click(function () {
+                swal({
+                    title: "Cảnh báo",
 
-                        });
-                    }
-                });
+                    text: "Bạn có chắc chắn là muốn xóa sản phẩm?",
+                    buttons: ["Hủy bỏ", "Đồng ý"],
+                })
+                    .then((willDelete) => {
+                        if (willDelete) {
+                            swal("Đã xóa thành công.!", {
+
+                            });
+                        }
+                    });
+            });
         });
-    });
-    //oTable = $('#sampleTable').dataTable();
-    //$('#all').click(function (e) {
-    //    $('#sampleTable tbody :checkbox').prop('checked', $(this).is(':checked'));
-    //    e.stopImmediatePropagation();
-    //});
+        //oTable = $('#sampleTable').dataTable();
+        //$('#all').click(function (e) {
+        //    $('#sampleTable tbody :checkbox').prop('checked', $(this).is(':checked'));
+        //    e.stopImmediatePropagation();
+        //});
 
-    //EXCEL
-    // $(document).ready(function () {
-    //   $('#').DataTable({
+        //EXCEL
+        // $(document).ready(function () {
+        //   $('#').DataTable({
 
-    //     dom: 'Bfrtip',
-    //     "buttons": [
-    //       'excel'
-    //     ]
-    //   });
-    // });
+        //     dom: 'Bfrtip',
+        //     "buttons": [
+        //       'excel'
+        //     ]
+        //   });
+        // });
 
-    //     //Sao chép dữ liệu
-    //     var copyTextareaBtn = document.querySelector('.js-textareacopybtn');
+        //     //Sao chép dữ liệu
+        //     var copyTextareaBtn = document.querySelector('.js-textareacopybtn');
 
-    // copyTextareaBtn.addEventListener('click', function(event) {
-    //   var copyTextarea = document.querySelector('.js-copytextarea');
-    //   copyTextarea.focus();
-    //   copyTextarea.select();
+        // copyTextareaBtn.addEventListener('click', function(event) {
+        //   var copyTextarea = document.querySelector('.js-copytextarea');
+        //   copyTextarea.focus();
+        //   copyTextarea.select();
 
-    //   try {
-    //     var successful = document.execCommand('copy');
-    //     var msg = successful ? 'successful' : 'unsuccessful';
-    //     console.log('Copying text command was ' + msg);
-    //   } catch (err) {
-    //     console.log('Oops, unable to copy');
-    //   }
-    // });
+        //   try {
+        //     var successful = document.execCommand('copy');
+        //     var msg = successful ? 'successful' : 'unsuccessful';
+        //     console.log('Copying text command was ' + msg);
+        //   } catch (err) {
+        //     console.log('Oops, unable to copy');
+        //   }
+        // });
 
 
-    //Modal
-    $("#show-emp").on("click", function () {
-        $("#ModalUP").modal({ backdrop: false, keyboard: false })
-    });
-</script>
-<script>
-    //In dữ liệu
-    function printDiv(divName) {
-        var printContents = document.getElementById(divName).innerHTML;
-        var originalContents = document.body.innerHTML;
+        //Modal
+        $("#show-emp").on("click", function () {
+            $("#ModalUP").modal({ backdrop: false, keyboard: false })
+        });
+    </script>
+    <script>
+        //In dữ liệu
+        function printDiv(divName) {
+            var printContents = document.getElementById(divName).innerHTML;
+            var originalContents = document.body.innerHTML;
 
-        document.body.innerHTML = printContents;
+            document.body.innerHTML = printContents;
 
-        window.print();
+            window.print();
 
-        document.body.innerHTML = originalContents;
+            document.body.innerHTML = originalContents;
 
-    }
-</script>
-@* Bootstrap cho navs *@
+        }
+    </script>
+    @* Bootstrap cho navs *@
 @*<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>*@
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>*@
