--- a/Test02/Views/PhongKho/TaoPhieuNhapKho.cshtml
+++ b/Test02/Views/PhongKho/TaoPhieuNhapKho.cshtml
@@ -14,16 +14,15 @@
     <div class="col-md-12">
         <div class="tile">
             <h2 style="text-align:center" id="sample1">PHIẾU ĐỀ NGHỊ NHẬP KHO</h2>
-            @using (Html.BeginForm())
+            @using (Html.BeginForm("TaoPhieuNhapKho", "PhongKho", FormMethod.Post))
             {
                 @Html.AntiForgeryToken()
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="tile-body">
-                <form class="row">
+                <div class="row">
                     <div class="form-group col-md-12" id="sample3">
                         <label class="control-label">- Kính gửi: </label>
                         <input class="form-control" type="text" id="kinhgui" required>
-                    
+
                     </div>
                     <div class="form-group col-md-12" id="sample4">
                         <label class="control-label">- Nhập vào các kho: </label> <br />
@@ -95,13 +94,13 @@
                             </tbody>
                         </table>
                     </div>
-                </form>
-                <input type="submit" value="Lưu phiếu" class="btn btn-save" />
-                <a class="btn btn-cancel" href="QuanLyDL">Hủy bỏ</a>
-            </div>
+                    <div class="form-group col-md-12">
+                        <input type="submit" value="Lưu phiếu" class="btn btn-save" />
+                        <a class="btn btn-cancel" href="QuanLyDL">Hủy bỏ</a>
+                    </div>
+                </div>
             }
 
         </div>
     </div>
 </div>
-   
